--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <script src="js/ScreenQuad.js"></script>
   <script src="js/keycode.js"></script>
   <script src="js/svg-boundings.js"></script>
+  <script src="js/xrmp.js"></script>
   <script>
     const container = document.getElementById('container');
     const canvas = document.getElementById('canvas');
@@ -109,84 +110,6 @@
       };
     })();
 
-    const numPlayerMatrixElements =
-      (3+4) + // hmd
-      (1 + (3+4)) * 2 + // gamepads
-      (1 + (5*4*(3+3))) * 2; // hands
-    const playerMatrix = (() => {
-      const playerMatrix = new ArrayBuffer(Uint32Array.BYTES_PER_ELEMENT*2 + numPlayerMatrixElements*Float32Array.BYTES_PER_ELEMENT);
-      playerMatrix.setArrayBuffer = (() => {
-        const uint8Array = new Uint8Array(playerMatrix);
-        return newArrayBuffer => {
-          uint8Array.set(new Uint8Array(newArrayBuffer));
-        };
-      })();
-      let playerMatrixIndex = 0;
-      const _getPlayerMatrixIndex = n => {
-        const oldPlayerMatrixIndex = playerMatrixIndex;
-        playerMatrixIndex += n;
-        return oldPlayerMatrixIndex;
-      };
-      playerMatrix.type = new Uint32Array(playerMatrix, _getPlayerMatrixIndex(Uint32Array.BYTES_PER_ELEMENT), 1);
-      playerMatrix.id = new Uint32Array(playerMatrix, _getPlayerMatrixIndex(Uint32Array.BYTES_PER_ELEMENT), 1);
-      playerMatrix.hmd = {
-        position: new Float32Array(playerMatrix, _getPlayerMatrixIndex(3*Float32Array.BYTES_PER_ELEMENT), 3),
-        quaternion: new Float32Array(playerMatrix, _getPlayerMatrixIndex(4*Float32Array.BYTES_PER_ELEMENT), 4),
-      };
-      const _makePlayerMatrixGamepad = () => {
-        const enabled = new Uint32Array(playerMatrix, _getPlayerMatrixIndex(Uint32Array.BYTES_PER_ELEMENT), 1);
-        const position = new Float32Array(playerMatrix, _getPlayerMatrixIndex(3*Float32Array.BYTES_PER_ELEMENT), 3);
-        const quaternion = new Float32Array(playerMatrix, _getPlayerMatrixIndex(4*Float32Array.BYTES_PER_ELEMENT), 4);
-
-        return {
-          enabled,
-          position,
-          quaternion,
-        };
-      };
-      playerMatrix.gamepads = [
-        _makePlayerMatrixGamepad(),
-        _makePlayerMatrixGamepad(),
-      ];
-      const _makePlayerMatrixHand = () => {
-        const enabled = new Uint32Array(playerMatrix, _getPlayerMatrixIndex(Uint32Array.BYTES_PER_ELEMENT), 1);
-        const data = new Float32Array(playerMatrix, _getPlayerMatrixIndex(5*4*(3+3)*Float32Array.BYTES_PER_ELEMENT), 5*4*(3+3));
-        return {
-          enabled,
-          data,
-        };
-      };
-      playerMatrix.hands = (() => {
-        const hands = Array(2);
-        for (let i = 0; i < hands.length; i++) {
-          hands[i] = _makePlayerMatrixHand();
-        }
-        return hands;
-      })();
-      return playerMatrix;
-    })();
-    const numObjectMatrixElements = 3+4;
-    const objectMatrix = (() => {
-      const objectMatrix = new ArrayBuffer(Uint32Array.BYTES_PER_ELEMENT*2 + numObjectMatrixElements*Float32Array.BYTES_PER_ELEMENT);
-      objectMatrix.setArrayBuffer = (() => {
-        const uint8Array = new Uint8Array(objectMatrix);
-        return newArrayBuffer => {
-          uint8Array.set(new Uint8Array(newArrayBuffer));
-        };
-      })();
-      let objectMatrixIndex = 0;
-      const _getObjectMatrixIndex = n => {
-        const oldPbjectMatrixIndex = objectMatrixIndex;
-        objectMatrixIndex += n;
-        return oldPbjectMatrixIndex;
-      };
-      objectMatrix.type = new Uint32Array(objectMatrix, _getObjectMatrixIndex(Uint32Array.BYTES_PER_ELEMENT), 1);
-      objectMatrix.id = new Uint32Array(objectMatrix, _getObjectMatrixIndex(Uint32Array.BYTES_PER_ELEMENT), 1);
-      objectMatrix.position = new Float32Array(objectMatrix, _getObjectMatrixIndex(3*Float32Array.BYTES_PER_ELEMENT), 3);
-      objectMatrix.quaternion = new Float32Array(objectMatrix, _getObjectMatrixIndex(4*Float32Array.BYTES_PER_ELEMENT), 4);
-      return objectMatrix;
-    })();
-
     const upVector = new THREE.Vector3(0, 1, 0);
     const armQuaternionOffset = new THREE.Quaternion().setFromUnitVectors(new THREE.Vector3(0, -1, 0), new THREE.Vector3(0, 0, -1));
 
@@ -221,7 +144,6 @@
       }
     };
 
-    const localPlayerId = Math.floor(Math.random() * 0xFFFFFFFF);
     const playerMeshes = [];
     const objectMeshes = [];
     let voicechatEnabled = false;
@@ -240,133 +162,103 @@
       const microphoneSourceNode = audioCtx.createMediaStreamSource(microphoneMediaStream);
       microphoneSourceNode.connect(scriptProcessorNode);
 
+      playerMesh.player.onaudio = e => {
+        playerMesh.audioBuffers.push(e.buffer);
+      };
+
       const positionalAudio = new THREE.PositionalAudio(audioListener);
       positionalAudio.setNodeSource(scriptProcessorNode);
       playerMesh.add(positionalAudio);
     };
-    const ws = (() => {
-      const multiplayerServer = getQueryVariable('m');
-      if (multiplayerServer) {
-        const ws = new WebSocket(multiplayerServer + '?id=' + localPlayerId);
-        ws.binaryType = 'arraybuffer';
-        ws.onopen = () => {
-          console.log('websocket open');
+    const mp = (() => {
+      const url = getQueryVariable('m');
+      if (url) {
+        const mp = new XRMultiplayer(url);
+        mp.localPlayer = null;
+        mp.onsync = () => {
+          mp.localPlayer = mp.addPlayer(mp.id);
 
-          ws.send(JSON.stringify({type: 'playerEnter'}));
-        };
-        ws.onclose = err => {
-          console.log('websocket close');
-        };
-        ws.onerror = err => {
-          console.warn('websocket error', err);
-        };
-        ws.onmessage = m => {
-          const {data} = m;
-          if (typeof data === 'string') {
-            const j = JSON.parse(data);
-            const {type} = j;
+          const objectId = 1;
+          const objectMesh = objectMeshes.find(objectMesh => objectMesh.object.id === objectId);
+          if (!objectMesh) {
+            const object = mp.addObject(objectId);
+            object.setExpression('[1,2,3]');
 
-            switch (type) {
-              case 'playerEnter': {
-                const {id} = j;
-
-                const playerMesh = _makeRemotePlayerMesh(id);
-                scene.add(playerMesh);
-                playerMeshes.push(playerMesh);
-                if (audioCtx) {
-                  _bindPlayerMeshAudio(playerMesh);
-                }
-
-                const skinImg = new Image();
-                skinImg.crossOrigin = 'Anonymous';
-                skinImg.src = 'img/skins/male.png';
-                skinImg.onload = () => {
-                  playerMesh.setImage(skinImg);
-                };
-                skinImg.onerror = err => {
-                  console.warn('skin image error', err.stack);
-                };
-
-                console.log('player enter', id);
-                break;
-              }
-              case 'playerLeave': {
-                const {id} = j;
-
-                const playerMeshIndex = playerMeshes.findIndex(playerMesh => playerMesh.playerId === id);
-                const playerMesh = playerMeshes[playerMeshIndex];
-                scene.remove(playerMesh);
-                playerMeshes.splice(playerMeshIndex, 1);
-
-                console.log('player leave', id);
-                break;
-              }
-              case 'objectAdd': {
-                const {id} = j;
-
-                const objectMesh = _makeObjectMesh(id);
-                scene.add(objectMesh);
-                objectMeshes.push(objectMesh);
-                break;
-              }
-              case 'objectRemove': {
-                const {id, owner} = j;
-
-                const objectMeshIndex = objectMeshes.findIndex(objectMesh => objectMesh.objectId === id);
-                const objectMesh = objectMeshes[objectMeshIndex];
-                scene.remove(objectMesh);
-                objectMeshes.splice(objectMeshes, 1);
-                break;
-              }
-              case 'sync': {
-                const objectId = 1;
-                const objectMesh = objectMeshes.find(objectMesh => objectMesh.objectId === objectId);
-                if (!objectMesh) {
-                  _addObject(objectId);
-
-                  ws.send(JSON.stringify({type: 'objectAdd', id: objectId}));
-                  ws.send(JSON.stringify({type: 'objectSetUpdateExpression', id: objectId, expression: '[1,2,3]'}));
-                }
-                break;
-              }
-              default: {
-                console.warn('got invalid json messasge type', type);
-                break;
-              }
-            }
-          } else {
-            const type = new Uint32Array(data, 0, 1)[0];
-            if (type === MESSAGE_TYPES.PLAYER_MATRIX) {
-              const id = new Uint32Array(data, Uint32Array.BYTES_PER_ELEMENT, 1)[0];
-              const playerMesh = playerMeshes.find(playerMesh => playerMesh.playerId === id);
-
-              playerMatrix.setArrayBuffer(data);
-              playerMesh.update(playerMatrix);
-            } else if (type === MESSAGE_TYPES.AUDIO) {
-              if (voicechatEnabled) {
-                const id = new Uint32Array(data, Uint32Array.BYTES_PER_ELEMENT, 1)[0];
-                const playerMesh = playerMeshes.find(playerMesh => playerMesh.playerId === id);
-
-                const float32Array = new Float32Array(data, Uint32Array.BYTES_PER_ELEMENT*2, (data.byteLength - Uint32Array.BYTES_PER_ELEMENT*2) / Float32Array.BYTES_PER_ELEMENT);
-                playerMesh.audioBuffers.push(float32Array);
-              }
-            } else if (type === MESSAGE_TYPES.OBJECT_MATRIX) {
-              const id = new Uint32Array(data, Uint32Array.BYTES_PER_ELEMENT, 1)[0];
-              const objectMesh = objectMeshes.find(objectMesh => objectMesh.objectId === id);
-
-              objectMatrix.setArrayBuffer(data);
-              objectMesh.update(objectMatrix);
-            } else {
-              console.warn('unknown binary message type', {type});
-            }
+            _addObjectMesh(object);
           }
         };
-        return ws;
+        mp.onclose = () => {
+          console.log('mp close');
+        };
+        mp.onerror = e => {
+          console.warn('mp error', e.error);
+        };
+        mp.onplayerenter = e => {
+          const {player} = e;
+          const {id} = player;
+
+          const playerMesh = _makeRemotePlayerMesh(player);
+          scene.add(playerMesh);
+          playerMeshes.push(playerMesh);
+
+          player.onupdate = e => {
+            playerMesh.update(e.matrix);
+          };
+
+          if (audioCtx) {
+            _bindPlayerMeshAudio(playerMesh);
+          }
+
+          const skinImg = new Image();
+          skinImg.crossOrigin = 'Anonymous';
+          skinImg.src = 'img/skins/male.png';
+          skinImg.onload = () => {
+            playerMesh.setImage(skinImg);
+          };
+          skinImg.onerror = err => {
+            console.warn('skin image error', err.stack);
+          };
+
+          // console.log('player enter', id);
+        };
+        mp.onplayerleave = e => {
+          const {player} = e;
+          const {id} = player;
+
+          const playerMeshIndex = playerMeshes.findIndex(playerMesh => playerMesh.player.id === id);
+          const playerMesh = playerMeshes[playerMeshIndex];
+          scene.remove(playerMesh);
+          playerMeshes.splice(playerMeshIndex, 1);
+
+          // console.log('player leave', id);
+        };
+        mp.onobjectadd = e => {
+          const {object} = e;
+          const {id} = object;
+
+          const objectMesh = _makeObjectMesh(object);
+          scene.add(objectMesh);
+          objectMeshes.push(objectMesh);
+
+          object.onupdate = e => {
+            objectMesh.update(e.matrix);
+          };
+        };
+        mp.onobjectremove = e => {
+          const {object} = e;
+          const {id} = object;
+
+          const objectMeshIndex = objectMeshes.findIndex(objectMesh => objectMesh.object.id === id);
+          const objectMesh = objectMeshes[objectMeshIndex];
+          scene.remove(objectMesh);
+          objectMeshes.splice(objectMeshes, 1);
+        };
+        return mp;
       } else {
         return null;
       }
     })();
-    const _isWsOpen = () => !!ws && ws.readyState === WebSocket.OPEN;
+    const _isMpOpen = () => Boolean(mp) && mp.isOpen();
 
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
@@ -661,11 +553,11 @@
       };
       const _angleDiff = (a, b) => _mod((b - a) + Math.PI, Math.PI * 2) - Math.PI;
 
-      return playerId => {
+      return player => {
         const mesh = skin({
           limbs: true,
         });
-        mesh.playerId = playerId;
+        mesh.player = player;
 
         const uniforms = THREE.UniformsUtils.clone(skin.SKIN_SHADER.uniforms);
 
@@ -750,13 +642,13 @@
         return mesh;
       };
     })();
-    const _makeObjectMesh = objectId => {
+    const _makeObjectMesh = object => {
       const geometry = new THREE.BoxBufferGeometry(0.1, 0.1, 0.1);
       const material = new THREE.MeshPhongMaterial({
         color: 0xFF0000,
       });
       const mesh = new THREE.Mesh(geometry, material);
-      mesh.objectId = objectId;
+      mesh.object = object;
       mesh.update = objectMatrix => {
         mesh.position.fromArray(objectMatrix.position);
         mesh.quaternion.fromArray(objectMatrix.quaternion);
@@ -765,10 +657,14 @@
       };
       return mesh;
     };
-    const _addObject = objectId => {
-      const objectMesh = _makeObjectMesh(objectId);
+    const _addObjectMesh = object => {
+      const objectMesh = _makeObjectMesh(object);
       scene.add(objectMesh);
       objectMeshes.push(objectMesh);
+
+      object.onupdate = e => {
+        objectMesh.update(e.matrix);
+      };
     };
 
     const portalGeometry = new THREE.PlaneBufferGeometry(gridWorldSize, gridWorldSize);
@@ -1803,26 +1699,26 @@
         } */
       };
       const _pushPlayerUpdate = () => {
-        if (_isWsOpen()) {
-          playerMatrix.type[0] = MESSAGE_TYPES.PLAYER_MATRIX;
-          playerMatrix.id[0] = localPlayerId;
+        if (_isMpOpen()) {
+          // playerMatrix.type[0] = MESSAGE_TYPES.PLAYER_MATRIX;
+          // playerMatrix.id[0] = localPlayerId;
 
-          camera.position.toArray(playerMatrix.hmd.position);
-          camera.quaternion.toArray(playerMatrix.hmd.quaternion);
+          camera.position.toArray(mp.localPlayer.playerMatrix.hmd.position);
+          camera.quaternion.toArray(mp.localPlayer.playerMatrix.hmd.quaternion);
 
           for (let i = 0; i < controllerMeshes.length; i++) {
             const controllerMesh = controllerMeshes[i];
-            playerMatrix.gamepads[i].enabled[0] = 1;
-            controllerMesh.position.toArray(playerMatrix.gamepads[i].position);
-            controllerMesh.quaternion.toArray(playerMatrix.gamepads[i].quaternion);
+            mp.localPlayer.playerMatrix.gamepads[i].enabled[0] = 1;
+            controllerMesh.position.toArray(mp.localPlayer.playerMatrix.gamepads[i].position);
+            controllerMesh.quaternion.toArray(mp.localPlayer.playerMatrix.gamepads[i].quaternion);
           }
 
           for (let i = 0; i < 2; i++) {
-            playerMatrix.hands[i].enabled[0] = +handMeshes[i].visible;
-            playerMatrix.hands[i].data.set(handMeshes[i].handFrameData);
+            mp.localPlayer.playerMatrix.hands[i].enabled[0] = +handMeshes[i].visible;
+            mp.localPlayer.playerMatrix.hands[i].data.set(handMeshes[i].handFrameData);
           }
 
-          ws.send(playerMatrix);
+          mp.localPlayer.pushUpdate();
         }
       };
       const _updateObjects = () => {
@@ -1837,13 +1733,11 @@
             grabbedObject.quaternion.fromArray(gamepad.pose.orientation);
             grabbedObject.updateMatrixWorld();
 
-            if (_isWsOpen()) {
-              objectMatrix.type[0] = MESSAGE_TYPES.OBJECT_MATRIX;
-              objectMatrix.id[0] = objectMesh.objectId;
-              objectMesh.position.toArray(objectMatrix.position);
-              objectMesh.quaternion.toArray(objectMatrix.quaternion);
+            if (_isMpOpen()) {
+              objectMesh.position.toArray(objectMesh.object.objectMatrix.position);
+              objectMesh.quaternion.toArray(objectMesh.object.objectMatrix.quaternion);
 
-              ws.send(objectMatrix);
+              objectMesh.object.pushUpdate();
             }
           }
         }
@@ -2116,12 +2010,8 @@
                   scriptProcessorNode.onaudioprocess = e => {
                     const float32Array = e.inputBuffer.getChannelData(0);
 
-                    if (_isWsOpen()) {
-                      const audioMessage = new ArrayBuffer(Uint32Array.BYTES_PER_ELEMENT*2 + float32Array.byteLength);
-                      new Uint32Array(audioMessage, 0, 1)[0] = MESSAGE_TYPES.AUDIO;
-                      new Uint32Array(audioMessage, Uint32Array.BYTES_PER_ELEMENT, 1)[0] = localPlayerId;
-                      new Float32Array(audioMessage, Uint32Array.BYTES_PER_ELEMENT*2, float32Array.length).set(float32Array);
-                      ws.send(audioMessage);
+                    if (_isMpOpen()) {
+                      mp.localPlayer.pushAudio(float32Array);
                     }
 
                     e.outputBuffer.getChannelData(0).fill(0);
