Rename object setExpression to setUpdateExpression

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             const cubeMesh = _makeCubeMesh();
             objectMesh.add(cubeMesh);
 
-            objectMesh.object.setExpression('[1,2,3]');
+            objectMesh.object.setUpdateExpression('[1,2,3]');
 
             scene.add(objectMesh);
           }
