Add xrid script src

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <script src="js/ScreenQuad.js"></script>
   <script src="js/keycode.js"></script>
   <script src="js/svg-boundings.js"></script>
+  <script src="js/xrid.js"></script>
   <script src="js/xrmp.js"></script>
   <script src="js/xrmp-three.js"></script>
   <script>
