Url bar cleanup again

--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
           ctx.fillStyle = '#333';
           ctx.fillRect(0, 0, urlBarWidth, urlBarHeight);
           ctx.fillStyle = '#FFF';
-          ctx.fillRect(10, 10, urlBarWidth - 10*2, urlBarHeight - 10*2);
+          ctx.fillRect(5, 5, urlBarWidth - 10, urlBarHeight - 10);
           ctx.fillStyle = '#333';
           ctx.font = `${fontSize}px Arial`;
           ctx.fillText(urlText, 10, urlBarHeight - 10*2 - 30);
